added Input template for reusing it

--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -18,9 +18,6 @@
  h2{
      font-size: 30px;
      font-weight: bold;
+     white-space: nowrap;
  }
 
- .titles {
-     width: 100%;
-     font-weight: bold;
- }
