--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,1 +1,6 @@
-<p>input works!</p>
+<div class="field">
+    <div class="titles">
+        <label>{{ label }}</label>
+    </div>
+    <input class="input" [formControl]="control">
+</div>
