--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'bulma/css/bulma.css';
+
+body{
+    background-color: #85FFBD;
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+}
+
