added input type as Input property of InputComponent

--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -19,5 +19,10 @@
      font-size: 30px;
      font-weight: bold;
      white-space: nowrap;
+     margin-bottom: 1em;
+ }
+
+ button{
+     margin-top: 1.5em;
  }
 
