changing again height

--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,6 +1,6 @@
 .form {
     width: 60%;
-    height: 95vh;
+    height: 100vmax;
     display: flex;
     align-items: center;
     justify-content: center;
