testing SO snippet to make 100vh look great without scroll on mobile

--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,6 +1,6 @@
 .form {
     width: 60%;
-    height: 100vmax;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,6 +31,19 @@
     color: red;
  }
 
+ /* inputs */
+
  .special {
      width: 360px;
  }
+
+ /* make 100vh look great without scroll in mobile */
+ body {
+    min-height: 100vh;
+    min-height: fill-available;
+    min-height: -webkit-fill-available;
+}
+html {
+    height: fill-available;
+    height: -webkit-fill-available;
+}
