--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -39,10 +39,9 @@
 
  /* make 100vh look great without scroll in mobile */
  body {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+        flex-direction: column;
     height: calc(var(--vh, 1vh) * 100);
   }
