created small header with the links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<div>
+    <div class="links">
+        <a class="link" routerLink="/inbox" routerLinkActive="active">Inbox</a>
+        <a class="link" routerLink="/signout" routerLinkActive="active">Sign Out</a>
+        <a class="link" routerLink="/" routerLinkActive="active">Sign In</a>
+        <a class="link" routerLink="/signup" routerLinkActive="active">Sign Up</a>
+    </div>
+</div>
+
 <router-outlet></router-outlet>
