--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,3 +11,11 @@ body {
     align-items: center;
     flex-direction: column;
 }
+
+.links{
+    margin-top: 0.8em;
+}
+.link {
+    margin: 0.8em;
+    font-weight: bold;
+}
