--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="links-wrapper">
     <div class="links">
         <a class="link" routerLink="/inbox" routerLinkActive="active">Inbox</a>
         <a class="link" routerLink="/signout" routerLinkActive="active">Sign Out</a>
